--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,3 +1,80 @@
-// Place all the styles related to the items controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.main-contents{
+  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo';
+  background-color: #F5F5F5;
+  .pickup {
+  padding: 40px 0;
+  a{
+    color: #0099E8;
+    text-decoration: none;
+  }
+  h2{
+    font-size: 28px;
+    text-align: center;
+    font-weight: bold;
+  }
+  &__contents {
+  width: 940px;
+  margin: 0 auto;
+  }
+  &__text {
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    margin: 26px 11px;
+  }
+  &__box {
+    height: 330px;
+    width: 213px;
+    margin: 0 0 0 20px;
+    position: relative;
+    float: left;
+    background-color: #fff;
+    a {
+      display: block;
+      color: #333;
+      text-decoration: none;
+    }
+    &__photo{
+      overflow: hidden;
+      position: relative;
+      width: 100%;
+      height: 0;
+      padding: 0 0 100%;
+    }
+    .img-width.lazyloaded {
+      height: 213px;
+      width: 213px;
+      object-fit: cover;
+    }
+    }
+    &__body {
+      padding: 16px;
+      height: 110px;
+      .items-box{
+        margin: 8px 0 0;
+      }
+      .items-price{
+        font-size: 17px;
+      }
+      .items-name{
+        overflow: hidden;
+        position: relative;
+        font-weight: 400;
+        height: 3em;
+        line-height: 1.5;
+        word-break: break-word;
+        white-space: normal;
+      }
+    }
+    &__view-all {
+    padding: 20px 0 30px;
+    width: 99.5%;
+    text-align: right;
+    display: inline-block;
+    a {
+      font-size: 14px;
+
+    }
+    }
+  }
+}
