--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -41,7 +41,7 @@
       height: 0;
       padding: 0 0 100%;
     }
-    .img-width.lazyloaded {
+    .img-width {
       height: 213px;
       width: 213px;
       object-fit: cover;
