--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -3,238 +3,238 @@
     %h2.pickup__head ピックアップカテゴリー
     %section.pickup__content.clearfix
       %h3.pickup__text
-        %a{:href => "#"}
+        %a{href: "#"}
           レディース 新着アイテム
       .pickup__contents.clearfix
         %section.pickup__box
-          %a{:href => "#"}
+          %a{href: "#"}
             %figure.pickup__photo
-              %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+              = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         %section.pickup__box
-          %a{:href => "#"}
+          %a{href: "#"}
             %figure.pickup__photo
-              %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+              = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         %section.pickup__box
-          %a{:href => "#"}
+          %a{href: "#"}
             %figure.pickup__photo
-              %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+              = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         %section.pickup__box
-          %a{:href => "#"}
+          %a{href: "#"}
             %figure.pickup__photo
-              %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+              = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         .pickup__view-all
-          %a{:href => "/jp/category/1/"} すべての商品を見る
+          %a{href: "/jp/category/1/"} すべての商品を見る
         %section.pickup__content.clearfix
           %h3.pickup__text
-            %a{:href => "#"}
+            %a{href: "#"}
               メンズ 新着アイテム
           .pickup__contents.clearfix
             %section.pickup__box
-              %a{:href => "#"}
+              %a{href: "#"}
                 %figure.pickup__photo
-                  %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                  = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             %section.pickup__box
-              %a{:href => "#"}
+              %a{href: "#"}
                 %figure.pickup__photo
-                  %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                  = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             %section.pickup__box
-              %a{:href => "#"}
+              %a{href: "#"}
                 %figure.pickup__photo
-                  %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                  = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             %section.pickup__box
-              %a{:href => "#"}
+              %a{href: "#"}
                 %figure.pickup__photo
-                  %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                  = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             .pickup__view-all
-              %a{:href => "/jp/category/1/"} すべての商品を見る
+              %a{href: "/jp/category/1/"} すべての商品を見る
             %section.pickup__content.clearfix
               %h3.pickup__text
-                %a{:href => "#"}
+                %a{href: "#"}
                   ベビー・キッズ 新着アイテム
               .pickup__contents.clearfix
                 %section.pickup__box
-                  %a{:href => "#"}
+                  %a{href: "#"}
                     %figure.pickup__photo
-                      %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                      = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 %section.pickup__box
-                  %a{:href => "#"}
+                  %a{href: "#"}
                     %figure.pickup__photo
-                      %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                      = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 %section.pickup__box
-                  %a{:href => "#"}
+                  %a{href: "#"}
                     %figure.pickup__photo
-                      %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                      = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 %section.pickup__box
-                  %a{:href => "#"}
+                  %a{href: "#"}
                     %figure.pickup__photo
-                      %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                      = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 .pickup__view-all
-                  %a{:href => "/jp/category/1/"} すべての商品を見る
+                  %a{href: "/jp/category/1/"} すべての商品を見る
 
   %section.pickup
     %h2.pickup__head ピックアップブランド
     %section.pickup__content.clearfix
       %h3.pickup__text
-        %a{:href => "#"}
+        %a{href: "#"}
           シャネル 新着アイテム
       .pickup__contents.clearfix
         %section.pickup__box
-          %a{:href => "#"}
+          %a{href: "#"}
             %figure.pickup__photo
-              %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+              = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         %section.pickup__box
-          %a{:href => "#"}
+          %a{href: "#"}
             %figure.pickup__photo
-              %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+              = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         %section.pickup__box
-          %a{:href => "#"}
+          %a{href: "#"}
             %figure.pickup__photo
-              %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+              = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         %section.pickup__box
-          %a{:href => "#"}
+          %a{href: "#"}
             %figure.pickup__photo
-              %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+              = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         .pickup__view-all
-          %a{:href => "/jp/category/1/"} すべての商品を見る
+          %a{href: "/jp/category/1/"} すべての商品を見る
         %section.pickup__content.clearfix
           %h3.pickup__text
-            %a{:href => "#"}
+            %a{href: "#"}
               ルイヴィトン 新着アイテム
           .pickup__contents.clearfix
             %section.pickup__box
-              %a{:href => "#"}
+              %a{href: "#"}
                 %figure.pickup__photo
-                  %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                  = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             %section.pickup__box
-              %a{:href => "#"}
+              %a{href: "#"}
                 %figure.pickup__photo
-                  %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                  = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             %section.pickup__box
-              %a{:href => "#"}
+              %a{href: "#"}
                 %figure.pickup__photo
-                  %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                  = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             %section.pickup__box
-              %a{:href => "#"}
+              %a{href: "#"}
                 %figure.pickup__photo
-                  %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                  = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             .pickup__view-all
-              %a{:href => "/jp/category/1/"} すべての商品を見る
+              %a{href: "/jp/category/1/"} すべての商品を見る
             %section.pickup__content.clearfix
               %h3.pickup__text
-                %a{:href => "#"}
+                %a{href: "#"}
                   ナイキ 新着アイテム
               .pickup__contents.clearfix
                 %section.pickup__box
-                  %a{:href => "#"}
+                  %a{href: "#"}
                     %figure.pickup__photo
-                      %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                      = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 %section.pickup__box
-                  %a{:href => "#"}
+                  %a{href: "#"}
                     %figure.pickup__photo
-                      %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                      = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 %section.pickup__box
-                  %a{:href => "#"}
+                  %a{href: "#"}
                     %figure.pickup__photo
-                      %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                      = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 %section.pickup__box
-                  %a{:href => "#"}
+                  %a{href: "#"}
                     %figure.pickup__photo
-                      %img.img-width.lazyloaded{:alt => "お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット", "data-src" => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", :src => "https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026"}/
+                      = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 .pickup__view-all
-                  %a{:href => "/jp/category/1/"} すべての商品を見る
+                  %a{href: "/jp/category/1/"} すべての商品を見る
