--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,240 +1,245 @@
 .main-contents
-  %section.pickup
+  .pickup
     %h2.pickup__head ピックアップカテゴリー
-    %section.pickup__content.clearfix
+    .pickup__content.clearfix
       %h3.pickup__text
-        %a{href: "#"}
+        = link_to "/" do
           レディース 新着アイテム
       .pickup__contents.clearfix
-        %section.pickup__box
-          %a{href: "#"}
-            %figure.pickup__photo
+        .pickup__box
+          = link_to "/" do
+            .pickup__photo
               = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
-        %section.pickup__box
-          %a{href: "#"}
-            %figure.pickup__photo
+        .pickup__box
+          = link_to "/" do
+            .pickup__photo
               = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
-        %section.pickup__box
-          %a{href: "#"}
-            %figure.pickup__photo
+        .pickup__box
+          = link_to "/" do
+            .pickup__photo
               = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
-        %section.pickup__box
-          %a{href: "#"}
-            %figure.pickup__photo
+        .pickup__box
+          = link_to "/" do
+            .pickup__photo
               = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         .pickup__view-all
-          %a{href: "/jp/category/1/"} すべての商品を見る
-        %section.pickup__content.clearfix
+          = link_to "/" do
+            すべての商品を見る
+        .pickup__content.clearfix
           %h3.pickup__text
-            %a{href: "#"}
+            = link_to "/" do
               メンズ 新着アイテム
           .pickup__contents.clearfix
-            %section.pickup__box
-              %a{href: "#"}
-                %figure.pickup__photo
+            .pickup__box
+              = link_to "/" do
+                .pickup__photo
                   = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
-            %section.pickup__box
-              %a{href: "#"}
-                %figure.pickup__photo
+            .pickup__box
+              = link_to "/" do
+                .pickup__photo
                   = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
-            %section.pickup__box
-              %a{href: "#"}
-                %figure.pickup__photo
+            .pickup__box
+              = link_to "/" do
+                .pickup__photo
                   = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
-            %section.pickup__box
-              %a{href: "#"}
-                %figure.pickup__photo
+            .pickup__box
+              = link_to "/" do
+                .pickup__photo
                   = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             .pickup__view-all
-              %a{href: "/jp/category/1/"} すべての商品を見る
-            %section.pickup__content.clearfix
+              = link_to "/" do
+                すべての商品を見る
+            .pickup__content.clearfix
               %h3.pickup__text
-                %a{href: "#"}
+                = link_to "/" do
                   ベビー・キッズ 新着アイテム
               .pickup__contents.clearfix
-                %section.pickup__box
-                  %a{href: "#"}
-                    %figure.pickup__photo
+                .pickup__box
+                  = link_to "/" do
+                    .pickup__photo
                       = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
-                %section.pickup__box
-                  %a{href: "#"}
-                    %figure.pickup__photo
+                .pickup__box
+                  = link_to "/" do
+                    .pickup__photo
                       = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
-                %section.pickup__box
-                  %a{href: "#"}
-                    %figure.pickup__photo
+                .pickup__box
+                  = link_to "/" do
+                    .pickup__photo
                       = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
-                %section.pickup__box
-                  %a{href: "#"}
-                    %figure.pickup__photo
+                .pickup__box
+                  = link_to "/" do
+                    .pickup__photo
                       = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 .pickup__view-all
-                  %a{href: "/jp/category/1/"} すべての商品を見る
-
-  %section.pickup
+                  = link_to "/" do
+                    すべての商品を見る
+  .pickup
     %h2.pickup__head ピックアップブランド
-    %section.pickup__content.clearfix
+    .pickup__content.clearfix
       %h3.pickup__text
-        %a{href: "#"}
+        = link_to "/" do
           シャネル 新着アイテム
       .pickup__contents.clearfix
-        %section.pickup__box
-          %a{href: "#"}
-            %figure.pickup__photo
+        .pickup__box
+          = link_to "/" do
+            .pickup__photo
               = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
-        %section.pickup__box
-          %a{href: "#"}
-            %figure.pickup__photo
+        .pickup__box
+          = link_to "/" do
+            .pickup__photo
               = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
-        %section.pickup__box
-          %a{href: "#"}
-            %figure.pickup__photo
+        .pickup__box
+          = link_to "/" do
+            .pickup__photo
               = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
-        %section.pickup__box
-          %a{href: "#"}
-            %figure.pickup__photo
+        .pickup__box
+          = link_to "/" do
+            .pickup__photo
               = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
             .pickup__body
               %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
               .items-box
                 .items-price ¥ 59,900
         .pickup__view-all
-          %a{href: "/jp/category/1/"} すべての商品を見る
-        %section.pickup__content.clearfix
+          = link_to "/" do
+            すべての商品を見る
+        .pickup__content.clearfix
           %h3.pickup__text
-            %a{href: "#"}
+            = link_to "/" do
               ルイヴィトン 新着アイテム
           .pickup__contents.clearfix
-            %section.pickup__box
-              %a{href: "#"}
-                %figure.pickup__photo
+            .pickup__box
+              = link_to "/" do
+                .pickup__photo
                   = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
-            %section.pickup__box
-              %a{href: "#"}
-                %figure.pickup__photo
+            .pickup__box
+              = link_to "/" do
+                .pickup__photo
                   = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
-            %section.pickup__box
-              %a{href: "#"}
-                %figure.pickup__photo
+            .pickup__box
+              = link_to "/" do
+                .pickup__photo
                   = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
-            %section.pickup__box
-              %a{href: "#"}
-                %figure.pickup__photo
+            .pickup__box
+              = link_to "/" do
+                .pickup__photo
                   = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                 .pickup__body
                   %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                   .items-box
                     .items-price ¥ 59,900
             .pickup__view-all
-              %a{href: "/jp/category/1/"} すべての商品を見る
-            %section.pickup__content.clearfix
+              = link_to "/" do
+                すべての商品を見る
+            .pickup__content.clearfix
               %h3.pickup__text
-                %a{href: "#"}
+                = link_to "/" do
                   ナイキ 新着アイテム
               .pickup__contents.clearfix
-                %section.pickup__box
-                  %a{href: "#"}
-                    %figure.pickup__photo
+                .pickup__box
+                  = link_to "/" do
+                    .pickup__photo
                       = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
-                %section.pickup__box
-                  %a{href: "#"}
-                    %figure.pickup__photo
+                .pickup__box
+                  = link_to "/" do
+                    .pickup__photo
                       = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
-                %section.pickup__box
-                  %a{href: "#"}
-                    %figure.pickup__photo
+                .pickup__box
+                  = link_to "/" do
+                    .pickup__photo
                       = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
-                %section.pickup__box
-                  %a{href: "#"}
-                    %figure.pickup__photo
+                .pickup__box
+                  = link_to "/" do
+                    .pickup__photo
                       = image_tag src="https://static.mercdn.net/thumb/photos/m10609695896_1.jpg?1563634026", alt: 'お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット', class: 'img-width'
                     .pickup__body
                       %h3.items-name お値下げ☆メルカリ便☆ヴェルサーチ☆メデューサ ブレスレット
                       .items-box
                         .items-price ¥ 59,900
                 .pickup__view-all
-                  %a{href: "/jp/category/1/"} すべての商品を見る
+                  = link_to "/" do
+                    すべての商品を見る
