--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -243,3 +243,7 @@
                 .pickup__view-all
                   = link_to "/" do
                     すべての商品を見る
+.banner
+  = render "banner"
+.footer
+  = render "footer"
