--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,3 +1,40 @@
+=render 'header'
+
+%section.slideshow 
+  .slideshow__outer
+    .slideshow__outer__stage{left:"-4320px", width:"8640px"}
+      .slideshow__outer__stage__item{width:"100%"}
+        =link_to "/", class:"slideshow-pull" do
+          .slideshow-inner
+      .slideshow__outer__stage__item{width:"1440px"}
+        .slideshow-vi
+          .slideshow-visual
+            .slideshow-visual__content
+              %h2
+                スマホでかんたん
+                %br フリマアプリ
+              %p
+                メルカリはスマホカメラからすぐに出品できる
+                %br 購入時も安心な独自システムのアプリです
+              .slideshow-visual__content__store
+                =link_to "/", target:"_blank", class:"slideshow-pull" do
+                  = image_tag '//www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?863303983', alt: ''
+                =link_to "/", target:"_blank", class:"slideshow-pull" do
+                  = image_tag '//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?863303983', alt: ''
+            =image_tag '//www-mercari-jp.akamaized.net/assets/img/common/jp/top/main_content_pc.png?863303983', alt:'', height:'390px'
+      .slideshow__outer__stage__item{width:"1440px"}
+        =link_to "/", class:"slideshow-pull" do
+          .slideshow-inner
+
+  .slideshow-nav
+    .slideshow-nav__prev prev
+    .slideshow-nav__next next
+  .slideshow-dots
+    .slideshow-dot
+      %span
+    .slideshow-dot
+      %span
+
 .main-contents
   .pickup
     %h2.pickup__head ピックアップカテゴリー
