--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -226,6 +226,31 @@
           display: block;
         }
       }
+      &__single-inner{
+      padding: 64px;
+      border-top: 1px solid #f5f5f5;
+      background-color: #fff;
+      
+        &__button{
+          width: 320px;
+          height: 50px;
+          background: #ea352d;
+          text-align: center;
+          margin: 0 auto;
+
+          &__text{
+            display: block;
+            line-height: 50px;
+            text-decoration: none;
+            color: #fff;
+            font-size: 14px; 
+          }
+        }
+        &__button:active{
+          background: #333;
+          transition: 0.8s; 
+        }
+      }
     }
   }
 }
