--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -39,6 +39,6 @@
                 %i.fa.fa-check
                 %span やることリスト
             %li.header__inner__main__right__nav__user__mypage
-              =link_to "/" do
+              =link_to "users/signup_page" do
                 = image_tag '//static.mercdn.net/images/member_photo_noimage_thumb.png', alt: '', width: '32'
                 %span マイページ
