--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import'./0signup_page';
+@import'./1signup_page';
+@import'./2signup_page';
+@import'./3signup_page';
+@import'./4signup_page';
+@import'./5signup_page';
+//@import'./login_page.';
