--- a/app/views/items/_user-identification.html.haml
+++ b/app/views/items/_user-identification.html.haml
@@ -35,7 +35,7 @@
               %span.mypage__nav__main-contents__mypage-identification__form__group__form-arbitrary 任意
               .mypage__nav__main-contents__mypage-identification__form__group__select
                 
-                = form.select :prefecture, [["--", "0"], ["北海道", "1"],  ["米", "2"], ["英", "3"],["仏", "4"]], {class: "mypage__nav__main-contents__mypage-identification__form__group__select__select-box"}
+                = form.select :prefecture, [["--", "0"], ["北海道", "1"],  ["米", "2"], ["英", "3"],["仏", "4"]]
                 %i.fa.fa-angle-down.fa-2x
             .mypage__nav__main-contents__mypage-identification__form__group
               = form.label :"市区町村"
