--- a/app/assets/stylesheets/_user-identification.scss
+++ b/app/assets/stylesheets/_user-identification.scss
@@ -27,8 +27,7 @@
         }
       }
     }
-    &__group{
-      @include clearfix;
+    &__group{   
       margin: 40px 0 0;
       font-size: 14px;
       label{
@@ -63,14 +62,14 @@
           position: absolute;
           right: 16px;
           top: 25%;
-          z-index: 2;
+          z-index: 1;
           color: #888;
-      
         }
         select{
+          background-color: rgda(0,0,0,0 );
           width: 100%;
           position: relative;
-          z-index: 2;
+          z-index: 100;
           height: 48px;
           padding: 0 16px;
           border-radius: 4px;
@@ -79,18 +78,13 @@
           font-size: 16px;
           line-height: 1.5;
           cursor: pointer;
-          outline: 0;
           -webkit-appearance: none;
-          
           border: 1px solid #ccc;
-          background: 0;
           font-size: 16px;
           line-height: 1.5;
           cursor: pointer;
         }
-        // select{
-        //   display: none;
-        // }
+        
       }
     }
     &__btn-red{
@@ -114,6 +108,5 @@
         text-decoration: none;
       }
     }
-
   }
 }
