sign-up,login機能

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,4 +1,4 @@
-=render 'header'
+=render 'layouts/header'
 
 %section.slideshow 
   .slideshow__outer
@@ -281,6 +281,6 @@
                   = link_to "/" do
                     すべての商品を見る
 .banner
-  = render "banner"
+  = render "layouts/banner"
 .footer
-  = render "footer"
+  = render "layouts/footer"
