--- a/app/views/users/signout.html.haml
+++ b/app/views/users/signout.html.haml
@@ -1,7 +1,7 @@
 .mypage
   .mypage__nav
     .mypage__nav__side-bar
-      = render 'mypage-sidebar'
+      = render 'layouts/mypage-sidebar'
     .mypage__nav__main-contents
       .mypage__nav__main-contents__single-inner
         .mypage__nav__main-contents__single-inner__button
