--- a/app/assets/stylesheets/_3signup_page.scss
+++ b/app/assets/stylesheets/_3signup_page.scss
@@ -181,11 +181,12 @@
               border-radius: 4px;
               border: 1px solid #ccc;
               padding-left: 10px;
-              background: #fff;
+              background: rgba(255, 255, 255, 0);
               line-height: 1.5;
               font-size: 16px;
               margin-top: 8px;
               float: left;
+              z-index:100;
               cursor: pointer;
             }
             .fas{
@@ -195,6 +196,7 @@
               top: -35px;
               left: -10px;
               float:right;
+              z-index: 1;
               cursor: pointer;
             }
             .far{
@@ -203,6 +205,7 @@
               top: 72px;
               right: -228px;
               font-size: 20px;
+              z-index: 1;
             }
 
           }
