--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -121,6 +121,49 @@ padding-top:8px;
         }
       }
     }
+    &__btn{
+      width: 220px;
+      height: 50px;
+      text-align: center;
+      &__signup{
+        display: inline-block;
+        margin-right:10px;
+        .btn_red{
+          background: #ea352d;
+          border: 1px solid #ea352d;
+          color: #fff;
+          padding: 10px;
+          width: 100px;
+          height: 30px;
+          border-radius: 5px;
+        }
+        .btn_red:hover{
+          color:white;
+        }
+      }
+      &__login{
+        display: inline-block;
+        .btn_blue{
+          border: 1px solid #0099e8;
+          background: rgb(255, 255, 255);
+          color: #0099e8;
+          padding: 10px;
+          width: 100px;
+          height: 30px;
+          border-radius: 5px;
+        }
+        .btn_blue:hover{
+          color: #fff;
+          border: 1px solid #0099e8;
+          background: rgb(255, 255, 255);
+          padding: 10px;
+          width: 100px;
+          height: 30px;
+          border-radius: 5px;
+          transition-duration:0.5s;
+        }
+      }
+    }
   }
 }
 
