--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -92,6 +92,6 @@
       電話番号の確認
       %i.fa.fa-chevron-right
   %li.mypage__nav__side-bar__lists__list
-    = link_to"/" do 
+    = link_to"signout" do 
       ログアウト
       %i.fa.fa-chevron-right
