--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -1,5 +1,5 @@
 .mercari_sign_up_container
-  = render 'users/header-logo'
+  = render 'layouts/header-logo'
   .main
     .main__section
       .main__section__top
@@ -32,7 +32,7 @@
             新町1-1-1
             hogehogeマンション101
             %br/
-            ほげ ほげお
+            = current_user.nickname
           %p.main__buy-content__buy-content__user-inner__buy-user-text
           = link_to'/', class: 'main__buy-content__buy-content__user-inner__buy-user-fix' do
             %span 変更する
@@ -51,4 +51,5 @@
           = link_to'/', class: 'main__buy-content__buy-content__buy-inner__buy-user-fix' do
             %span 変更する
             %i.fa.fa-chevron-right
-  = render 'users/footer-registrations'
+  = render 'layouts/footer-registrations'
+
