--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -1,6 +1,6 @@
 %ul.mypage__nav__side-bar__lists
   %li.mypage__nav__side-bar__lists__list
-    = link_to"/" do 
+    = link_to "show" do 
       マイページ
       %i.fa.fa-chevron-right
   %li.mypage__nav__side-bar__lists__list
@@ -68,7 +68,7 @@
 %h3.mypage__nav__side-bar__head 設定
 %ul.mypage__nav__side-bar__nav-lists
   %li.mypage__nav__side-bar__lists__list
-    = link_to"/" do 
+    = link_to "profile" do 
       プロフィール
       %i.fa.fa-chevron-right
   %li.mypage__nav__side-bar__lists__list
@@ -84,7 +84,7 @@
       メール/パスワード
       %i.fa.fa-chevron-right
   %li.mypage__nav__side-bar__lists__list
-    = link_to"/" do 
+    = link_to"identification" do 
       本人情報
       %i.fa.fa-chevron-right
   %li.mypage__nav__side-bar__lists__list
