--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,4 @@
+=render 'layouts/header'
 .mypage
   .mypage__nav
     .mypage__nav__side-bar
@@ -6,7 +7,8 @@
       .mypage__nav__main-contents__user-icon
         = link_to "/" do
           = image_tag '//static.mercdn.net/images/member_photo_noimage_thumb.png', height: '60', width: '60', class: 'mypage__nav__main-contents__user-icon__image'
-          %h2.mypage__nav__main-contents__user-icon__name hoge
+          %h2.mypage__nav__main-contents__user-icon__name 
+            = current_user.nickname
           .mypage__nav__main-contents__user-icon__number
             %div
               評価
@@ -35,4 +37,9 @@
         %ul.mypage__nav__main-contents__bottom-tabcontents__item-lists
           %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list.show 取引中の商品がありません
           %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list 過去の取引はありません
+.banner
+  = render "layouts/banner"
+.footer
+  = render "layouts/footer"
+
 
