--- a/app/assets/stylesheets/_post-btn.scss
+++ b/app/assets/stylesheets/_post-btn.scss
@@ -41,21 +41,21 @@
     color: rgba(255, 255, 255, 0.952);
   }
 }
-.post_box:hover{
-  transform: rotateZ(1000deg) scale(2.2, 2.2);
-  bottom:500px;
-  right: 500px;
-  width: 500px;
-  height: 500px;
-  .post_text{
-    transition: all 10s ease 0s;
-    padding-top:100px;
-    font-size:100px;
-  }
-  .fas{
-    transition: all 10s ease 0s;
-    padding-top:10px;
-    font-size:100px;
-    color: rgba(255, 255, 255, 0.952);
-  }
-}
+// .post_box:hover{
+//   transform: rotateZ(1000deg) scale(2.2, 2.2);
+//   bottom:500px;
+//   right: 500px;
+//   width: 500px;
+//   height: 500px;
+//   .post_text{
+//     transition: all 10s ease 0s;
+//     padding-top:100px;
+//     font-size:100px;
+//   }
+//   .fas{
+//     transition: all 10s ease 0s;
+//     padding-top:10px;
+//     font-size:100px;
+//     color: rgba(255, 255, 255, 0.952);
+//   }
+// }
