--- a/app/assets/stylesheets/_single.scss
+++ b/app/assets/stylesheets/_single.scss
@@ -133,7 +133,6 @@
         font-weight: 100;
         border-top: 1px solid #ccc;
         display: flow-root;
-        
         .li-left{
           float: left;
         }
@@ -176,12 +175,20 @@
           cursor: pointer;
           text-align: center;
         }
-        .btn-red{
-          text-align: center;
+        label {
           margin-top: 40px;
-          background: #ea352d;
-          border: 1px solid #ea352d;
+          position: relative;
           color: #fff;
+          font-weight: bold;
+          display: block;
+          width: 100%;
+          position: relative;
+          height: 48px;
+          background: #ea352d;
+          font-size: 14px;
+          text-align: center;
+          cursor: pointer;
+          line-height: 48px;
         }
         &__default__gray{
           display: block;
@@ -195,11 +202,10 @@
           text-align: center;
           width: 45%;
           margin: 24px auto 0;
-        }
-        .btn-gray{
           background: #aaa;
           border: 1px solid #aaa;
           color: #fff;
+          text-decoration: none;
         }
       }
       }
@@ -247,8 +253,11 @@
     vertical-align: top;
     background: #ea352d;
   }
+  span.form-any {
+    background-color: #8A8C8D
+  }
   .input-default{
-    max-height: 48px;
+    max-height: 40px;
     padding: 10px 16px 8px;
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -258,6 +267,17 @@
     width: 95%;
     margin: 8px 0 0;
   }
+  .input-brand{
+    max-height: 30px;
+    padding: 10px 16px 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    background: #fff;
+    line-height: 1.5;
+    font-size: 16px;
+    width: 91.5%;
+    margin: 8px 0 0;
+    }
   .textarea-default {
     margin: 8px 0 0;
     display: block;
