--- a/app/views/users/identification.html.haml
+++ b/app/views/users/identification.html.haml
@@ -1,4 +1,6 @@
 =render 'layouts/header'
+- breadcrumb :identification
+= render "layouts/breadcrumbs"
 .mypage
   .mypage__nav
     .mypage__nav__side-bar
