--- a/app/views/layouts/_banner.html.haml
+++ b/app/views/layouts/_banner.html.haml
@@ -1,16 +1,17 @@
-.banner__pc
-  .banner__pc__inner
-    %h2 スマホでかんたんフリマアプリ
-    %p 今すぐ無料ダウンロード！
-    .banner__pc__inner__icon-box
-      .banner__pc__inner__icon-box__icon
-        = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/mercari_icon.png?863303983"
-      %ul.banner__pc__inner__icon-box__icons
-        %li.banner__pc__inner__icon-box__icons__icon
-          = link_to"https://itunes.apple.com/jp/app/id667861049?l=ja&mt=8" do 
-            = image_tag"//www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?863303983"
-        %li.banner__pc__inner__icon-box__icons__icon
-          = link_to"https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja" do 
-            = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?863303983"
-  .banner__pc__image
-    = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/jp/download_content_pc.png?863303983"
+.banner
+  .banner__pc
+    .banner__pc__inner
+      %h2 スマホでかんたんフリマアプリ
+      %p 今すぐ無料ダウンロード！
+      .banner__pc__inner__icon-box
+        .banner__pc__inner__icon-box__icon
+          = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/mercari_icon.png?863303983"
+        %ul.banner__pc__inner__icon-box__icons
+          %li.banner__pc__inner__icon-box__icons__icon
+            = link_to"https://itunes.apple.com/jp/app/id667861049?l=ja&mt=8" do 
+              = image_tag"//www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?863303983"
+          %li.banner__pc__inner__icon-box__icons__icon
+            = link_to"https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja" do 
+              = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?863303983"
+    .banner__pc__image
+      = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/jp/download_content_pc.png?863303983"
