--- a/app/assets/stylesheets/_2signup_page.scss
+++ b/app/assets/stylesheets/_2signup_page.scss
@@ -154,7 +154,25 @@
           &__message2{
           }
           &__btn{
-            margin-top:50px;
+            display: block;
+            margin-top:32px;
+            width: 343px;
+            height: 50px;
+            // padding: 0 30px;
+            background-color: #ea352d;
+            // color: white;
+            cursor: pointer;
+            // font-size: 14px;
+            border-radius: 3px;
+            text-align: center;
+            a{
+              font-size: 14px;
+              color: white;
+              text-decoration: none;
+              line-height: 50px;
+
+
+            }
             .submit_btn{
               width: 343px;
               height: 50px;
@@ -167,12 +185,15 @@
             }
           }
           &__link{
-            margin-top:40px;
+            margin-top:32px;
             margin-left:150px;
             a{
               color: #0099e8;
               text-decoration: none;
               font-size:14px;
+            }
+            .fa{
+              color: #0099e8;
             }
           }
         }
