post_box_user_sigend_in?

--- a/app/views/layouts/_post-btn.html.haml
+++ b/app/views/layouts/_post-btn.html.haml
@@ -1,5 +1,6 @@
-= link_to 'items/new',class:'post_box' do
-  .post_text
-  出品
-  %br/
-  .fas.fa-camera
+- if user_signed_in? 
+  = link_to 'items/new',class:'post_box' do
+    .post_text
+    出品
+    %br/
+    .fas.fa-camera
