--- a/app/assets/stylesheets/_user-card.scss
+++ b/app/assets/stylesheets/_user-card.scss
@@ -140,10 +140,26 @@
             background-image:url(https://i.gyazo.com/b4b10305c78ac96c9bdc71a856fa9d2c.png);
             background-size:cover;
             background-position: 50% 50%;
-            widht:300px;
+            width:300px;
             height: 25px;
             position: relative;
             top:104px;
+          }
+          &__btn{
+            display: block;
+            width: 357px;
+            height: 50px;
+            background-color: #ea352d;
+            border-radius: 4px;
+            margin-top:50px;
+            text-align: center;
+            a{
+              color: white;
+              cursor: pointer;
+              font-size: 14px;
+              text-decoration: none;
+              line-height: 50px;
+            }
           }
             .submit_btn{
               width: 357px;
@@ -156,6 +172,7 @@
               border-radius: 4px;
               margin-top:50px;
           }
+
         }
       }
     }
