--- a/app/views/users/card_add_to.html.haml
+++ b/app/views/users/card_add_to.html.haml
@@ -16,7 +16,7 @@
                   %li.main__conect__lists__text
                     クレジットカード一覧
                   %li.main__conect__lists__link
-                    = link_to '/' ,class: 'card_link'do
+                    = link_to user_card_users_path(current_user) ,class: 'card_link' do
                       .main__conect__lists__link__text
                         クレジットカードを追加する
                       %i.far.fa-credit-card
